# flexparse

./: .coveragerc  .gitignore  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  setup.py
flexparse/: __init__.py  actions.py  formatters.py  namespace.py  parser.py  types.py  utils.py
flexparse/tests/: test_actions.py  test_namespace.py  test_parser.py  test_types.py  test_utils.py
flexparse/types/: __init__.py  lookup.py  number_range.py
flexparse/types/tests/: test_lookup.py  test_number_range.py
